# serendipity-research

./: .gitignore  README.md
CA_mining/: check_db.py  debug_replies_raw.py  fetch_live_tweets.py  insert_tweets_to_ca.py  migrate_add_refresh_log.py  prompt_lab.py  resolve_urls.py
CA_mining/archived_scripts/: check_alive_accounts.py  compare_outputs.md  compare_outputs.py  estimate_scrape.py  explore_output.md  explore_outputs.py  merge_outputs.py  render_user_files.py  scrape_estimate.csv
CA_mining/mining/: download_tweets.py  model_users.py
econ_model_claudeconnect/: README.md  app.py  default_run.json  generate_default_run.py  network.py  pyproject.toml  requirements.txt  run.py  simulation.py
tweet_views_model/: pyproject.toml  run_analysis.py  train_views_model_from_scrapes.py  twitter_timeline_scraper.js
tweet_views_model/data/twitter_scraps/: twitter_timeline_metrics (1).json  twitter_timeline_metrics (2).json  twitter_timeline_metrics (3).json  twitter_timeline_metrics.json
tweet_views_model/outputs/: predict_views.py  predict_views_standalone.py  raw_10_tweets.json  views_model.joblib  views_model_report.md  views_model_results.csv
web-of-claude/: config.json  config2.json  extract_problems.py  orchestrate.py  requirements.txt
web-of-claude/problems/: SUMMARY.md  aifutures.json  alexandrevariengien.json  astralcodexten.json  latentspace.json  news.json  peterwildeford.json  sarahconstantin.json  simonw.json  sublimeinternet.json  theindiepreneur.json  thezvi.json  tonydinh.json  usefulfictions.json  xiqo.json
(+975 files in other folders)
