[project]
name = "tweet-views-model"
version = "0.1.0"
description = "Estimate tweet views from engagement signals"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "seaborn>=0.13",
]

[tool.uv]
package = false
